zeit.cms changes
================

2.1.2 (unreleased)
------------------

- Support adding keywords from the whitelist with an autocomplete widget
  (#11421).

- Support pinning keywords (#12521).

- Set character limit for title and subtitle metadata (instead of validating
  them on check-in) (#12462).

- Autocomplete keywords on any substring, not just on prefix (#12519).

- Require at least one keyword to be entered as the default for any content
  type, make this configurable by content type (#12478).


2.1.1 (2013-05-16)
------------------

- Display last semantic change in object details heading, not an artificial
  "created date" (#12368).


2.1 (2013-04-23)
----------------

- Removed package dependencies that have become unused.


2.0 (2013-04-23)
----------------

- Add type identifier to blocks in centerpage xml. (#12269)

- When parsing html to xml, ``objectify_soup_fromstring`` fixes  HTML5 boolean
  attributes and HTML entities so they are XML compatible (#12267).

- Fix generating of tags (#12254)

- Fix autosaving of forms when user clicks on a DOM node inside the form
  container (#12211).

- Fix selecting of objects in reference dialog (#12102)

- Publish is not allowed in ILocalContent via the security machinery now (for
  #8413).

- Improved ObjectSequenceWidget so it became usable again.

- Added in-place add functionality to ObjectSequenceWidget (#8402).

- Included JQuery as well as MochiKit for the best of both worlds.

- Added a DAVConverterWrapper for XML properties to make it easy to use the
  DAV converter infrastructure with XML properties.

- Testing: HTTPLayer calls tearDown on the request handler during testTearDown
  now.

- ObjectSequenceWidget and DropObjectWidget don't accept any draggable anymore,
  they offer a parameter to configure the accept setting instead. Clipboard and
  zeit.find annotate their draggables with the content types (#9390).

- Introduce ValidateCheckinEvent (#9406).
